--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: "Tom"
+title: "Tom De Smedt"
 author: "Tom De Smedt"
 description: "My take on the IT, tech and data world." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "tom@tdsgn.be"
-twitter_username: "twitteruser"
+#twitter_username: "twitteruser"
 github_username: "tdesmedt-tdsgn"
 linkedin_username: "tdesmedt"
 #facebook_username: username
